# waldo

./: .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.doc  IMPLEMENTATION_PLAN.md  INSTALL  MANIFEST.in  README.md  pep517_backend.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  waldo.py
release_notes/: RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md
scripts/: install_local_pep517.sh
waldo/: __init__.py  __main__.py  cli.py
